test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/no-semicolon.widl
partial interface NoSemicolon {
  attribute boolean noSemiColon;
}

enum YouNeedOne {
  "really"
}
